--- a/app/src/main/res/layout/fragment_function_item.xml
+++ b/app/src/main/res/layout/fragment_function_item.xml
@@ -12,10 +12,12 @@
         android:orientation="vertical">
         <ImageView
             android:id="@+id/function_item_iv"
-            android:layout_width="25dp"
-            android:layout_height="25dp"
-            android:layout_marginBottom="@dimen/hight_5"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/hight_40"
+            android:paddingRight="@dimen/hight_15"
             android:visibility="gone"
+            android:paddingLeft="@dimen/hight_15"
+            android:layout_marginBottom="@dimen/hight_5"
             android:src="@mipmap/ic_launcher" />
 
         <TextView
