--- a/app/src/main/res/layout/fragment_persional_item_wave_contact.xml
+++ b/app/src/main/res/layout/fragment_persional_item_wave_contact.xml
@@ -57,7 +57,7 @@
                 <ImageView
                     android:layout_width="20dp"
                     android:layout_height="20dp"
-                    android:src="@mipmap/pikachu_sit" />
+                    android:src="@mipmap/ic_mobile_flag" />
 
                 <TextView
                     android:layout_width="wrap_content"
