--- a/app/src/main/res/layout/fragment_trade.xml
+++ b/app/src/main/res/layout/fragment_trade.xml
@@ -30,7 +30,17 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical">
-
+            <cn.bingoogolapple.bgabanner.BGABanner
+                android:id="@+id/trade_banner"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/hight_180"
+                android:scaleType="fitCenter"
+                app:banner_indicatorGravity="center_horizontal"
+                app:banner_pageChangeDuration="5000"
+                app:banner_placeholderDrawable="@mipmap/ic_launcher"
+                app:banner_tipTextSize="12sp"
+                app:banner_transitionEffect="defaultEffect"
+                app:banner_pointAutoPlayAble="true"/>
             <com.veni.tools.view.ticker.TickerView
                 android:id="@+id/trade_made_count"
                 android:layout_width="match_parent"
